Update contact method labels and project descriptions across multiple pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<script src="/js/dark-init.js"></script>
 		<link rel="canonical" href="https://indigo.spot/">
-		<meta name="description" content="Web developer based in the UK. I build apps, write, and take photos. Check out CashCat, favourites.me, and more."/>
+		<meta name="description" content="Web developer based in the UK. I build apps, write, and take photos. Check out CashCat, The Political Playground, and more."/>
 		<meta name="keywords" content="Indigo Nolan, Indy Nolan, Indigo, Indy, Nolan, web developer, software developer, student, developer, portfolio, CashCat, Fantasteroids, web development, UK"/>
 		<meta name="author" content="Indigo Nolan"/>
 		
@@ -181,13 +181,13 @@
 					</article>
 
 					<div class="projects-grid">
-						<a href="https://favourites.me" target="_blank" rel="noopener" class="project-item-link" itemscope itemtype="https://schema.org/WebApplication">
+						<a href="https://pp.indigo.spot" target="_blank" rel="noopener" class="project-item-link" itemscope itemtype="https://schema.org/WebApplication">
 							<article class="project-item">
 								<h4 itemprop="name">
-									<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M16.23,18L12,15.45L7.77,18L8.89,13.19L5.16,9.96L10.08,9.54L12,5L13.92,9.53L18.84,9.95L15.11,13.18L16.23,18M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" /></svg>
-									favourites.me
+									<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18,13H17.32L15.32,15H17.23L19,17H5L6.78,15H8.83L6.83,13H6L3,16V20A2,2 0 0,0 5,22H19A2,2 0 0,0 21,20V16L18,13M17,7.95L12.05,12.9L8.5,9.36L13.46,4.41L17,7.95M12.76,2.29L6.39,8.66C6,9.05 6,9.68 6.39,10.07L11.34,15C11.73,15.41 12.36,15.41 12.75,15L19.11,8.66C19.5,8.27 19.5,7.64 19.11,7.25L14.16,2.3C13.78,1.9 13.15,1.9 12.76,2.29Z" /></svg>
+									The Political Playground
 								</h4>
-								<p itemprop="description">Track your favorite films, shows, books, and games</p>
+								<p itemprop="description">Play my fun little election simulator!</p>
 							</article>
 						</a>
 						<a href="https://www.climatestorieslibrary.com" target="_blank" rel="noopener" class="project-item-link" itemscope itemtype="https://schema.org/WebSite">
@@ -258,7 +258,7 @@
 					<div class="contact-methods">
 						<a href="./portfolio/IndigoNolan-Resume.pdf" target="_blank" class="contact-method" rel="noopener">
 							<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M8 17V15H16V17H8M16 10L12 14L8 10H10.5V7H13.5V10H16M5 3H19C20.11 3 21 3.9 21 5V19C21 20.11 20.11 21 19 21H5C3.9 21 3 20.11 3 19V5C3 3.9 3.9 3 5 3M5 5V19H19V5H5Z" /></svg>
-							<span>View Resume</span>
+							<span>CV / Resume</span>
 						</a>
 						<a href="https://github.com/Lem0naise" target="_blank" class="contact-method" rel="noopener">
 							<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z" /></svg>
