--- a/blog.html
+++ b/blog.html
@@ -8,24 +8,31 @@ description: "Personal blog by Indigo Nolan covering technology, UX design, prog
 <div class="blog-header">
     <h1>blog • <a href="{{ "/thoughts/" | relative_url }}">thoughts</a></h1>
 
-    {% capture tags %}
-        {% for tag in site.tags %}
-            {{ tag[0] }}
-        {% endfor %}
-        {% endcapture %}
-    {% assign sortedtags = tags | split:' ' | sort %}
+   <p class="blog-subtitle">
+        <button id="theme-toggle" class="theme-filter-btn">
+            show topics
+        </button>
+    </p>
 
-    <p class="blog-subtitle">themes: 
-    {% for tag in sortedtags %}
-    <a href='#{{tag}}'>{{tag}}</a> {%unless forloop.last %}• {%endunless%}
-    {% endfor %}
+    <div id="theme-dropdown" class="theme-dropdown hidden">
+        {% capture tags %}
+            {% for tag in site.tags %}
+                {{ tag[0] }}
+            {% endfor %}
+        {% endcapture %}
+        {% assign sortedtags = tags | split:' ' | sort %}
+        
+        {% for tag in sortedtags %}
+            <a href='#{{tag}}' class="theme-tag">{{tag}}</a>
+        {% endfor %}
+    </div>
     </p>
 
 
      <div class="section-separator" style="margin-top: 10px; margin-bottom: 10px;"></div>
 
 
-      <p class="blog-subtitle">other: <a href="{{ "/feed.xml" | relative_url }}">follow blog (RSS)</a> • <a href='https://kresimiria.wiki'>fictional worldbuilding ↗</a></p>
+      <p class="blog-subtitle"><a href="{{ "/feed.xml" | relative_url }}">follow blog (RSS)</a> • <a href='https://kresimiria.wiki'>fictional worldbuilding ↗</a></p>
    
 </div>
 
