Add Spotify status display: implement fetching and displaying current Spotify song and artist in the UI (via Lanyard)

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 									
 									<li id='custom-status'>Currently: Building web applications and studying computer science</li>
 									<li id='weather-status'>My weather: Probably raining in Southampton.</li>
+									<li id='spotify-status' style='display: none;'></li>
 									<li id='github-activity'>Building <a target="_blank" href="https://github.com/Lem0naise/cashcat">CashCat</a>...</li>
 									<li id='intro'>I'm a computer science student who builds apps and websites.</li>
 									
