--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -251,6 +251,16 @@
 							</a>
 						</article>
 
+
+						<article class="project-item smaller">
+							<a href="../daylio" class="project-item-link" itemscope itemtype="https://schema.org/WebApplication">
+								<h4 itemprop="name">
+									 <svg class ='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>upload-box</title><path d="M5 3H19C20.11 3 21 3.9 21 5V19C21 20.11 20.11 21 19 21H5C3.9 21 3 20.11 3 19V5C3 3.9 3.9 3 5 3M16 17V15H8V17H16M16 11L12 7L8 11H10.5V14H13.5V11H16Z" /></svg>
+									Daylio CSV Cleaner</h4>
+								<p itemprop="description">A CSV cleaner for Daylio</p>
+							</a>
+						</article>
+
 						<article class="project-item smaller">
 							<a href="../reaction" class="project-item-link" itemscope itemtype="https://schema.org/WebApplication">
 								<h4 itemprop="name">
