Add About Me section to index.html and update small-tools heading in portfolio; adjust CSS for layout improvements

--- a/index.html
+++ b/index.html
@@ -161,6 +161,24 @@
 			<div class="section-separator"></div>
 
 
+
+			<!-- About Section -->
+			<section id="about" class="content-section">
+			<div class="section-content">
+					<h2>About Me</h2>
+					<div class="about-item about-intro"><ul><li>I'm a computer science student at Southampton. I specialise in full-stack web development and have experience with modern frameworks like Next.js. I like building software which solves real problems, and like deploying fast and iterating. <br/><br/> Whether I'm making personal finance tools like <a href='https://cashcat.app'>CashCat</a>, creating <a href='https://pp.indigo.spot'>political simulations</a>, making <a href='/portfolio#small-tools'>tiny tools</a>, or <a href='/portfolio'>anything else</a>, I'm always looking for new things to work on :)</li></ul></div>
+		</div>
+			</section>
+
+
+
+			
+
+
+
+			<div class="section-separator"></div>
+
+
 			<!-- Projects Section -->
 			<section id="projects" class="content-section">
 				<div class="section-content">
@@ -212,13 +230,11 @@
 			<div class="section-separator"></div>
 
 
-			<!-- About Section -->
 			<section id="about" class="content-section">
-				<div class="section-content">
-					<h2>About Me</h2>
+			<div class="section-content">
 					<div class="about-grid">
 						<div class="about-item">
-							<h3>Interests when I'm not coding</h3>
+							<h3>Other Interests</h3>
 							<ul>
 								<li>I love learning languages and travelling. I speak English, French, Russian, and a little bit of German, Spanish, and Italian. Please <a href="mailto:rec@indigonolan.com">send me</a> foreign book, film, and song recommendations!</li>
 								<li><a href="/photos">I do all kinds of photography</a> with my Nikon D7200 + Tamron 16-300mm.</li>
@@ -252,6 +268,8 @@
 
 
 			<div class="section-separator"></div>
+
+
 			<!-- Contact Info -->
 			<section id="contact-info" class="contact-info-section">
 				<div class="contact-content">
