--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -220,7 +220,7 @@
 					</div>
 
 					<!-- Tools/Fun Section -->
-					<h3 style="text-align: center; margin-top: 60px; margin-bottom: 24px; font-size: 24px; color: var(--text-light);">Small Tools and Fun</h3>
+					<h3 id='small-tools' style="text-align: center; margin-top: 60px; margin-bottom: 24px; font-size: 24px; color: var(--text-light);">Small Tools and Fun</h3>
 					
 					<div class="projects-grid tools-grid">
 						<article class="project-item smaller">
