--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
 							</a>
 							
 
-							<a class="option-card  smaller" href="#contact-info">
+							<a class="option-card  smaller" href="/cv">
 								<!-- inline SVG from imgs/phone.svg -->
 								
-								<h3><svg class='option-img' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M6.62,10.79C8.06,13.62 10.38,15.94 13.21,17.38L15.41,15.18C15.69,14.9 16.08,14.82 16.43,14.93C17.55,15.3 18.75,15.5 20,15.5A1,1 0 0,1 21,16.5V20A1,1 0 0,1 20,21A17,17 0 0,1 3,4A1,1 0 0,1 4,3H7.5A1,1 0 0,1 8.5,4C8.5,5.25 8.7,6.45 9.07,7.57C9.18,7.92 9.1,8.31 8.82,8.59L6.62,10.79Z" /></svg> Contact me</h3>
-								<p>Say hello</p>
+								<h3><svg class='option-img' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M6.62,10.79C8.06,13.62 10.38,15.94 13.21,17.38L15.41,15.18C15.69,14.9 16.08,14.82 16.43,14.93C17.55,15.3 18.75,15.5 20,15.5A1,1 0 0,1 21,16.5V20A1,1 0 0,1 20,21A17,17 0 0,1 3,4A1,1 0 0,1 4,3H7.5A1,1 0 0,1 8.5,4C8.5,5.25 8.7,6.45 9.07,7.57C9.18,7.92 9.1,8.31 8.82,8.59L6.62,10.79Z" /></svg>CV & Contact</h3>
+								<p>Contact me</p>
 							</a>
 
 							<a class="option-card  smaller" href="https://github.com/Lem0naise" target="_blank">
