added damaskus blog post

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -198,7 +198,7 @@
 							<p itemprop="description">A linear puzzle game made for Global Game Jam 2026! It also
 								features community levels and a level editor.</p>
 						</a>
-						<a class="project-blog-button" href="https://damaskus.josh.software">Community Level Editor</a>
+						<a class="project-blog-button" href="/damaskus">Read about the making</a>
 
 					</article>
 
