--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -204,16 +204,16 @@
 
 
 					<article class="project-item">
-						<a href="https://favourites.me" target="_blank" rel="noopener" class="project-item-link"
+						<a href="https://headandheart.app" target="_blank" rel="noopener" class="project-item-link"
 							itemscope itemtype="https://schema.org/WebSite">
-							<img src="/blog/whyibuilt/imgs/favouritesme.webp" alt="favourites.me screenshot"
+							<img src="/assets/imgs/headandheart.png" alt="favourites screenshot"
 								class="project-image">
 							<h4 itemprop="name">
 								<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 									<path
 										d="M16.23,18L12,15.45L7.77,18L8.89,13.19L5.16,9.96L10.08,9.54L12,5L13.92,9.53L18.84,9.95L15.11,13.18L16.23,18M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
 								</svg>
-								favourites.me
+								Head and Heart
 							</h4>
 							<p itemprop="description">A private media library manager to track your favorite films, TV
 								shows, books, games, and board games. Forget spreading everything across Letterboxd and
