update some styles

--- a/blog.html
+++ b/blog.html
@@ -10,8 +10,9 @@ description: "Personal blog by Indigo Nolan covering technology, UX design, prog
 
    <p class="blog-subtitle">
         <button id="theme-toggle" class="theme-filter-btn">
-            show topics
+            jump to topics
         </button>
+        <a class="theme-filter-btn" href="{{ "/feed.xml" | relative_url }}">follow (RSS)</a> 
     </p>
 
     <div id="theme-dropdown" class="theme-dropdown hidden">
@@ -29,10 +30,7 @@ description: "Personal blog by Indigo Nolan covering technology, UX design, prog
     </p>
 
 
-     <div class="section-separator" style="margin-top: 10px; margin-bottom: 10px;"></div>
-
-
-      <p class="blog-subtitle"><a href="{{ "/feed.xml" | relative_url }}">follow blog (RSS)</a> • <a href='https://kresimiria.wiki'>fictional worldbuilding ↗</a></p>
+     <div class="section-separator" style="margin-top: 0px; margin-bottom: 0px;"></div>
    
 </div>
 
