Update blog and thoughts titles to use 'notes' for consistency Move the status updates down
reshuffle the order of the icons

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@ description: "Personal blog by Indigo Nolan covering technology, UX design, prog
 ---
 
 <div class="blog-header">
-    <h1>blog • <a href="{{ "/thoughts/" | relative_url }}">thoughts</a></h1>
+    <h1>blog • <a href="{{ "/thoughts/" | relative_url }}">notes</a></h1>
 
    <p class="blog-subtitle">
         <button id="theme-toggle" class="theme-filter-btn">
