--- a/photos/index.html
+++ b/photos/index.html
@@ -61,7 +61,7 @@
 			<!-- Featured Photos Section -->
 			<section class="content-section featured-photos">
 				<div class="section-content">
-					<h2>Featured Photos</h2>
+					<h2 id="photo-title">Featured Photos</h2>
                     <div class="photo-intro">I try to be an eclectic photographer - I never stick to one thing, and my portfolio is a jumble of my interests. Enjoy.</div>
 					<div class="photos-grid">
 
