--- a/thoughts.html
+++ b/thoughts.html
@@ -6,7 +6,7 @@ description: "Fragments of thoughts, observations, and stream of consciousness b
 ---
 
 <div class="stream-header">
-    <h1><a href="{{ "/blog/" | relative_url }}">blog</a> • thoughts </h1>
+    <h1><a href="{{ "/blog/" | relative_url }}">blog</a> • notes </h1>
 
     <p class="stream-subtitle">personal reflections and lyrics • sensitive content </p>
     <div class="section-separator" style="margin-top: 10px; margin-bottom: 20px;"></div>
