--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 								<li><b>Books:</b> I Who Have Never Known Men, What You Are Looking For Is In the Library, Before the Coffee Gets Cold, The Invisible Man, Piranesi, A Short Stay In Hell, Smiley's People</li>
 								<li><b>Games:</b> Portal 1 & 2, OpenTTD, Rimworld, Celeste, Papers Please, Professor Layton, The Sims (2), Driver San Francisco</li>
 								<li><b>Music:</b> New Order, Ultravox, Edenheight, Eels, Los Campesinos!, Montreal, Tonka B, Moby, Muse, Bright Eyes, Dire Straits</li>
-								<li>If you want an easy way to track your favourite things too, check out <a href="https://favourites.me">favourites.me</a>!</li>
+								<li>If you want an easy way to track your favourite things too, check out <a href="https://headandheart.app">Head and Heart</a>!</li>
 							</ul>
 						</div>
 
