update favouritesme to headandheart

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 	<meta property="og:url" content="https://indigo.spot/">
 	<meta property="og:title" content="Indigo Nolan - I build apps, take photos, and write">
 	<meta property="og:description"
-		content="Web developer based in the UK. I build apps, write, and take photos. Check out CashCat, favourites.me, and more.">
+		content="Web developer based in the UK. I build apps, write, and take photos. Check out CashCat, Head and Heart, and more.">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:title" content="Indigo Nolan - I build apps, take photos, and write">
 	<meta property="twitter:description"
-		content="Web developer based in the UK. I build apps, write, and take photos. Check out CashCat, favourites.me, and more.">
+		content="Web developer based in the UK. I build apps, write, and take photos. Check out CashCat, Head and Heart, and more.">
 
 	<!-- Structured Data -->
 	<script type="application/ld+json">
@@ -297,7 +297,7 @@
 									me</a> foreign book, film, and song recommendations!</li>
 							<li><a href="/photos">I do all kinds of photography</a> with my Nikon D7200 + Tamron
 								16-300mm.</li>
-							<li>I love reading (and even <a href="https://favourites.me">built a tool to track my
+							<li>I love reading (and even <a href="https://headandheart.app">built a tool to track my
 									books!</a>). I also <a href='/blog'>love writing</a>.</li>
 							<li>I'm interested in current and historical politics, and strongly believe in the value of
 								civic engagement. I wrote a <a href="/blog/bad-ux-design-undermining-democracy">short
