add cloudflare workers

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 							personal finance tools like <a href='https://cashcat.app'>CashCat</a>, creating <a
 								href='https://pp.indigo.spot'>political simulations</a>, making <a
 								href='/portfolio#small-tools'>tiny tools</a>, or <a href='/portfolio'>anything else</a>,
-							I'm always looking for new things to work on :)</li>
+							I'm always looking for new things to work on.</li>
 					</ul>
 				</div>
 				<div class='about-item about-intro'>
@@ -205,7 +205,7 @@
 								href="https://github.com/Lem0naise/cashcat">CashCat</a>...</li>
 
 
-						<li id='visitor-count' style='display: list-item;'>Counting visits...</li>
+						<li id='visitor-count' style='display: list-item;'>Thanks for visiting my site!</li>
 					</ul>
 				</div>
 			</div>
