--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 					<ul>
 						<li>I'm a computer science student. I specialise in full-stack web development
 							and have experience with modern frameworks like Next.js. I like building software which
-							solves real problems, and like deploying fast and iterating. <br /><br /> Whether I'm making
+							solves real problems, deploying fast, and iterating. <br /><br /> Whether I'm making
 							personal finance tools like <a href='https://cashcat.app'>CashCat</a>, creating <a
 								href='https://pp.indigo.spot'>political simulations</a>, making <a
 								href='/portfolio#small-tools'>tiny tools</a>, or <a href='/portfolio'>anything else</a>,
@@ -237,8 +237,7 @@
 							</h3>
 							<span class="featured-badge">Featured</span>
 						</div>
-						<p itemprop="description">Free and private personal budgeting webapp built with users first in
-							mind. Now in early access!</p>
+						<p itemprop="description">Private personal budgeting app built with users first in mind.</p>
 						<div class="project-links">
 							<a href="https://cashcat.app" target="_blank" class="primary-link" rel="noopener"
 								itemprop="url">Try CashCat →</a>
@@ -270,7 +269,7 @@
 								</svg>
 								Climate Stories Library
 							</h4>
-							<p itemprop="description">International video library for climate crisis stories</p>
+							<p itemprop="description">International video library for climate crisis stories.</p>
 						</article>
 					</a>
 
