--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -120,8 +120,7 @@
 								</h3>
 								<span class="featured-badge">Featured</span>
 							</div>
-							<p itemprop="description">A free and user-focused personal budgeting webapp. Building early
-								access right now!
+							<p itemprop="description">A user-focused personal budgeting app. Sign up today!
 							</p>
 							<div class="project-links">
 								<p class="primary-link">Try CashCat →</p>
