--- a/convert/index.html
+++ b/convert/index.html
@@ -84,13 +84,13 @@
 						<div class="option-group">
 							<label for="image-to">To Format:</label>
 							<select id="image-to" class="format-select">
-								<option value="png">PNG (.png)</option>
 								<option value="jpg">JPEG (.jpg)</option>
+								<option value="png">PNG (.png)</option>
 								<option value="gif">GIF (.gif)</option>
 								<option value="bmp">BMP (.bmp)</option>
 								<option value="webp">WebP (.webp)</option>
 								<option value="tiff">TIFF (.tiff)</option>
-								<option value="pdf">PDF (.pdf)</option>
+								<option value="svg">SVG (.svg)</option>
 							</select>
 						</div>
 
