--- a/photos/index.html
+++ b/photos/index.html
@@ -62,7 +62,9 @@
 			<section class="content-section featured-photos">
 				<div class="section-content">
 					<h2 id="photo-title">Featured Photos</h2>
-                    <div class="photo-intro">I try to be an eclectic photographer - I never stick to one thing, and my portfolio is a jumble of my interests. Enjoy.</div>
+					<div class="photo-intro">
+						My photos have been featured on <a href="https://en.wikipedia.org/wiki/Terrorism_Act_2000#/media/File:Palestine_Action_Protest,_London,_Saturday_6th_September_-_10.jpg" target="_blank" rel="noopener">Wikipedia</a>, <a href='https://politicsuk.com/news/understanding-the-new-palestine-action-ruling/'>PoliticsUK</a>, the <a href='https://mancunion.com/2026/02/13/high-court-rules-that-the-ban-on-palestine-action-was-unlawful/'>Mancunion</a>, <a href="https://ypolitics.co.uk/news/uk-palestine-action-protests---productive-or-performative" target="_blank" rel="noopener">YPolitics</a>, <a href="https://www.counterfire.org/article/a-bad-day-for-the-met-and-a-good-one-for-protest-weekly-briefing" target="_blank" rel="noopener">Counterfire</a>, <a href="https://commons.wikimedia.org/wiki/Category:Athletics_at_the_2024_Summer_Olympics_%E2%80%93_Women%27s_4_%C3%97_100_metres_relay" target="_blank" rel="noopener">Wikimedia Commons</a>, <a href='https://www.europinion.uk/post/beyond-breaking-point-the-day-antisemitism-broke-britain'>Europinion</a>, <a href='https://muslimnews.co.uk/newspaper/un-experts-and-review-criticize-uk-ban-on-palestine-action-as-overreach/'>Muslim News</a>, <a href='https://un-aligned.org/posts/the-seven-deadly-sins-of-modern-democracy/'> Un-Aligned</a>, and more.
+					</div></div>
 					<div class="photos-grid">
 
 						<article class="photo-item featured-photo">
