add music page, adjust wording, improve

--- a/index.html
+++ b/index.html
@@ -179,19 +179,20 @@
 				<h2>About Me</h2>
 				<div class="about-item about-intro">
 					<ul>
-						<li>I'm a computer science student. I specialise in full-stack web development
-							and have experience with modern frameworks like Next.js. I like building software which
-							solves real problems, deploying fast, and iterating. <br /><br /> Whether I'm making
-							personal finance tools like <a href='https://cashcat.app'>CashCat</a>, creating <a
-								href='https://pp.indigo.spot'>political simulations</a>, making <a
-								href='/portfolio#small-tools'>tiny tools</a>, or <a href='/portfolio'>anything else</a>,
-							I'm always looking for new things to work on.</li>
+						<li>I'm a full-stack developer and CS student who loves building software which solves real
+							problems. I specialise in Next.js and modern web frameworks, with a focus on deploying fast
+							and iterating based on user needs. <br /><br /> Whether it's a
+							personal finance tool like <a href='https://cashcat.app'>CashCat</a>, a <a
+								href='https://pp.indigo.spot'>complex political simulation</a>, <a
+								href='/portfolio#small-tools'>a collection of utility tools</a>, or <a
+								href='/portfolio'>anything
+								else</a>, I'm always looking for new things to work on.</li>
 					</ul>
 				</div>
 				<div class='about-item about-intro'>
 					<noscript>
 						<ul>
-							
+
 							<li>Location: Southampton, UK</li>
 							<li>GitHub: Active in open source development</li>
 						</ul>
@@ -201,9 +202,9 @@
 						<li id='github-activity'>Building <a target="_blank"
 								href="https://github.com/Lem0naise/cashcat">CashCat</a>...</li>
 
-<li id='weather-status'>My weather: Probably raining in Southampton.</li>
+						<li id='weather-status'>My weather: Probably raining in Southampton.</li>
 						<li id='spotify-status' style='display: none;'></li>
-						
+
 						<li id='visitor-count' style='display: list-item;'>Thanks for visiting my site!</li>
 					</ul>
 				</div>
@@ -290,18 +291,19 @@
 					<div class="about-item">
 						<h3>Other Interests</h3>
 						<ul>
-							<li>I love learning languages and travelling. I speak English, French, Russian, and a little
-								bit of German, Spanish, and Italian. Please <a href="mailto:rec@indigonolan.com">send
-									me</a> foreign book, film, and song recommendations!</li>
 							<li><a href="/photos">I do all kinds of photography</a> with my Nikon D7200 + Tamron
 								16-300mm.</li>
+							<li>I sometimes make pixel music! Check out <a href="/music">my music</a>.</li>
+
 							<li>I love reading (and even <a href="https://headandheart.app">built a tool to track my
 									books!</a>). I also <a href='/blog'>love writing</a>.</li>
-							<li>I'm interested in current and historical politics, and strongly believe in the value of
-								civic engagement. I wrote a <a href="/blog/bad-ux-design-undermining-democracy">short
-									blog post about that</a> if you're interested. I also made an <a
-									href="https://pp.indigo.spot" target="_blank">election simulation game if you're
-									into that.</a></li>
+							<li>I'm interested in politics, and civic engagement. I wrote a <a
+									href="/blog/bad-ux-design-undermining-democracy">short
+									blog post about that</a>, and also made an election simulation game called <a
+									href="https://pp.indigo.spot" target="_blank">the Political Playground</a>.</li>
+							<li>I love <a href='blog/language-as-lossy-compression'>learning languages</a>. I speak
+								English, French, Russian, and a little
+								bit of German, Spanish, and Italian.</li>
 						</ul>
 					</div>
 					<div class="about-item">
@@ -309,8 +311,9 @@
 						<ul>
 							<li><b>Films:</b> Dr Strangelove, 12 Angry Men, Trainspotting, Duel, The Italian Job,
 								Electric Dreams, Duel</li>
-							<li><b>Books:</b> I Who Have Never Known Men, What You Are Looking For Is In the Library,
-								Before the Coffee Gets Cold, The Invisible Man, Piranesi, A Short Stay In Hell, Smiley's
+							<li><b>Books:</b> I Who Have Never Known Men, Before the Coffee Gets Cold, The Invisible
+								Man,
+								Piranesi, Smiley's
 								People</li>
 							<li><b>Games:</b> Portal 1 & 2, OpenTTD, Rimworld, Celeste, Papers Please, Professor Layton,
 								The Sims (2), Driver San Francisco</li>
@@ -322,16 +325,15 @@
 					</div>
 
 					<div class="about-item about-stretch">
-						<h3>Friends & Collaborators</h3>
+						<h3>Other Links</h3>
 						<ul>
 							<li><a href="https://josh.software" target="_blank" rel="noopener">Josh Wilcox</a> - CashCat
 								co-builder and fellow student</li>
 							<li><a href="https://indigowg.com" target="_blank" rel="noopener">Indigo Wolf-Garraway</a> -
 								Name buddy and fellow student</li>
+							<li>I offer <a href="./tutoring">tutoring services</a> for students at all levels.</li>
 						</ul>
 
-						<p style="text-align: left"><strong>Need help with maths or computer science?</strong> <a
-								href="./tutoring">I offer tutoring services</a> for students at all levels.</p>
 					</div>
 				</div>
 			</div>
