add github graph

--- a/index.html
+++ b/index.html
@@ -201,6 +201,13 @@
 						<li id='custom-status'>Currently: Building web applications and studying computer science</li>
 						<li id='github-activity'>Building <a target="_blank"
 								href="https://github.com/Lem0naise/cashcat">CashCat</a>...</li>
+						<li id='github-contributions'>
+							<img 
+								src="https://ghchart.rshah.org/8b5a83/lem0naise" 
+								alt="GitHub contribution graph"
+								class="github-contrib-graph"
+							/>
+						</li>
 
 						<li id='weather-status'>My weather: Probably raining in Southampton.</li>
 						<li id='spotify-status' style='display: none;'></li>
