add kudos system

--- a/index.html
+++ b/index.html
@@ -212,7 +212,9 @@
 						<li id='weather-status'>My weather: Probably raining in Southampton.</li>
 						<li id='spotify-status' style='display: none;'></li>
 
-						<li id='visitor-count' style='display: list-item;'>Thanks for visiting my site!</li>
+						<li id='clap-item' style='display: list-item; cursor: pointer;' title="Give kudos!">
+							<span id='clap-display'><span class='kudos-count'>...</span> kudos — click to give one!</span>
+						</li>
 					</ul>
 				</div>
 			</div>
