--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -127,7 +127,7 @@
 							</div>
 						</div>
 
-						<img src="/blog/whyibuilt/imgs/cashcat.webp" alt="cashcat screenshot"
+						<img src="https://cashcat.app/media/og.png" alt="cashcat screenshot"
 							class="project-image featured-image">
 					</article>
 				</a>
@@ -187,8 +187,7 @@
 					<article class="project-item">
 						<a href="https://headandheart.app" target="_blank" rel="noopener" class="project-item-link"
 							itemscope itemtype="https://schema.org/WebSite">
-							<img src="/assets/imgs/headandheart.png" alt="favourites screenshot"
-								class="project-image">
+							<img src="/assets/imgs/headandheart.png" alt="favourites screenshot" class="project-image">
 							<h4 itemprop="name">
 								<svg class='project-icon' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 									<path
