add kudos on blog post

--- a/index.html
+++ b/index.html
@@ -202,18 +202,16 @@
 						<li id='github-activity'>Building <a target="_blank"
 								href="https://github.com/Lem0naise/cashcat">CashCat</a>...</li>
 						<li id='github-contributions'>
-							<img 
-								src="https://ghchart.rshah.org/8b5a83/lem0naise" 
-								alt="GitHub contribution graph"
-								class="github-contrib-graph"
-							/>
+							<img src="https://ghchart.rshah.org/8b5a83/lem0naise" alt="GitHub contribution graph"
+								class="github-contrib-graph" />
 						</li>
 
 						<li id='weather-status'>My weather: Probably raining in Southampton.</li>
 						<li id='spotify-status' style='display: none;'></li>
 
 						<li id='clap-item' style='display: list-item; cursor: pointer;' title="Give kudos!">
-							<span id='clap-display'><span class='kudos-count'>...</span> kudos — click to give one!</span>
+							<span id='clap-display'><span class='kudos-count'>...</span> kudos — click to give
+								one!</span>
 						</li>
 					</ul>
 				</div>
@@ -390,6 +388,7 @@
 		</section>
 	</main>
 	<script src="js/dark.js?version=0.1"></script>
+	<script src="js/kudos.js"></script>
 	<script src="js/status-updates.js"></script>
 </body>
 
